Added page styling

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,17 @@
     <title>Web blackjack</title>
     <script src="vendor/phaser.min.js"></script>
     <script src="js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
   </head>
   <body>
+    <div class="header">
+      <h1>
+        Web Blackjack Game
+      </h1>
+    </div>
     <div id="game-content"></div>
+    <div class="footer">
+      Created by Nevaan
+    </div>
   </body>
 </html>
