Abandoned tests, reverted repo to working state

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8"/>
     <title>Web blackjack</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.js" data-main="js/Game.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.js" data-main="js/main.js"></script>
     <script src="vendor/phaser.min.js"></script>
-    <script src="js/Game.js"></script>
+    <script src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/style.css"/>
   </head>
   <body>
